// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonToTest should add only bpk specific classes if className prop is set to empty string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--secondary-on-dark"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`ButtonToTest should render correctly 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--secondary-on-dark"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`ButtonToTest should render correctly with "blank" and "rel" attributes 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--secondary-on-dark"
    href="#"
    rel="rel-overwrite"
    target="_blank"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`ButtonToTest should render correctly with "blank" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--secondary-on-dark"
    href="#"
    rel="noopener noreferrer"
    target="_blank"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`ButtonToTest should render correctly with "disabled" and "href" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--secondary-on-dark"
    disabled=""
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`ButtonToTest should render correctly with "rel" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--secondary-on-dark"
    href="#"
    rel="rel-attr"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`ButtonToTest should render correctly with a "disabled" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--secondary-on-dark"
    disabled=""
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`ButtonToTest should render correctly with a "href" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--secondary-on-dark"
    href="#"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`ButtonToTest should render correctly with a "large" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--secondary-on-dark"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`ButtonToTest should render correctly with an "iconOnly" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--icon-only bpk-button--secondary-on-dark"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`ButtonToTest should respect the class names entered as a string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--secondary-on-dark custom-class-1 custom-class-2"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;
